<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="4dp"
    android:background="@drawable/shadow"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp">

        <ImageView
            android:id="@+id/imageViewCard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_main"
            android:scaleType="centerInside"
            android:src="@drawable/template_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundView" />

        <TextView
            android:id="@+id/textViewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_medium"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/default_summary_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewCard" />

        <TextView
            android:id="@+id/textViewDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="#F1DBBB"
            android:ellipsize="end"
            android:fontFamily="@font/manrope"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:text="@string/default_summary_desc"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>