<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/orange"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/maincontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brand"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/promo_brand_logo"
                android:padding="10dp"
                android:src="@drawable/shopee" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/brandname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/manrope_bold"
                    android:gravity="center"
                    android:text="@string/promo_brand"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/brand"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/manrope_bold"
                        android:gravity="center"
                        android:text="@string/promo_big_label"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toTopOf="@+id/expirydate"
                        app:layout_constraintEnd_toStartOf="@+id/free_off"
                        app:layout_constraintStart_toEndOf="@+id/brand"
                        app:layout_constraintTop_toBottomOf="@+id/brandname" />

                    <TextView
                        android:id="@+id/free_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="4dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/manrope_medium"
                        android:gravity="bottom|start"
                        android:maxLines="2"
                        android:text="@string/promo_small_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/expirydate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/brandname" />
                </LinearLayout>

                <TextView
                    android:id="@+id/expirydate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/manrope"
                    android:gravity="center"
                    android:text="@string/promo_expiry"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/brand"
                    app:layout_constraintTop_toBottomOf="@+id/free_off" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
