<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUser"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewUser"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/shadow"
            android:contentDescription="@string/desc_user_profile"
            android:scaleType="fitCenter"
            android:src="@drawable/template_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundView" />

        <LinearLayout
            android:id="@+id/layoutUserDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/imageViewUser"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/manrope_bold"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/default_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/manrope"
                android:maxLines="1"
                android:text="@string/default_username"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUser">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutXP"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/linearProgressXP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    app:indicatorColor="@color/purple_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:trackCornerRadius="8dp"
                    app:trackThickness="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textViewXP"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/manrope"
                        android:gravity="center_vertical|end"
                        android:maxLines="1"
                        android:text="@string/default_xp_coins"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageViewXP"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_xp_light" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCoins"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutXP">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/linearProgressCoins"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:indeterminate="false"
                    app:indicatorColor="#7F741A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:trackCornerRadius="8dp"
                    app:trackThickness="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textViewCoins"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/manrope"
                        android:gravity="center_vertical|end"
                        android:maxLines="1"
                        android:text="@string/default_xp_coins"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageViewCoins"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_coins_light" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutCoins" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPagerSummary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>